# neural-network-playground

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
css/: style.css
js/: activations.js  app.js  datasets.js  matrix.js  network.js  optimizers.js  utils.js  visualizer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
